# sqlines

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
build-support/: clang_format_exclusions.txt
cmake_modules/: BuildUtils.cmake  FindClangTools.cmake  FindFreeTDS.cmake  FindOracle.cmake  SetupCxxFlags.cmake  ThirdpartyToolchain.cmake  san-config.cmake
sqlcommon/: applog.cpp  applog.h  file.cpp  file.h  os.cpp  os.h  parameters.cpp  parameters.h  release.h  sqlparserexp.h  str.cpp  str.h
sqldata/: CMakeLists.txt  applog.cpp  build_all.sh  build_all64.sh  os.cpp  parameters.cpp  poppack.h  pshpack8.h  sqlapibase.cpp  sqlapibase.h  sqlasaapi.cpp  sqlasaapi.h  sqlctapi.cpp  sqlctapi.h  sqldata.cpp  sqldata.h  sqldatacmd.cpp  sqldatacmd.h  sqldb.cpp  sqldb.h  sqldb2api.cpp  sqldb2api.h  sqlifmxapi.cpp  sqlifmxapi.h  sqlmysqlapi.cpp  sqlmysqlapi.h  sqlncli.h  sqlociapi.cpp  sqlociapi.h  sqlodbcapi.cpp  sqlodbcapi.h  sqlpgapi.cpp  sqlpgapi.h  sqlsncapi.cpp  sqlsncapi.h  sqlstdapi.cpp  sqlstdapi.h
sqldata_w/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  sqldata_w.pro
sqlines/: CMakeLists.txt  build_all.sh  build_all64.sh  file.cpp  filelist.cpp  filelist.h  main.cpp  makefile  parameters.cpp  sqlines.cpp  sqlines.h  sqlparserexp.h
sqlines-studio/: .gitignore  CMakeLists.txt  SQLinesStudio.pro  file.cpp  file.h  main.cpp  mainwindow.cpp  mainwindow.h  options.cpp  str.cpp
sqlines-w/: CMakeLists.txt  main.cpp  mainwindow.h  sqlines-w.pro
sqlparser/: CMakeLists.txt  build_all.sh  cobol.cpp  cobol.h  datatypes.cpp  dllmain.cpp  functions.cpp  greenplum.cpp  guess.cpp  helpers.cpp  informix.cpp  language.cpp  makefile  mysql.cpp  oracle.cpp  post.cpp  postgresql.cpp  procedures.cpp  report.cpp  report.h  select.cpp  sqlparser.cpp  sqlparser.def  sqlparser.h  sqlserver.cpp  statements.cpp  stats.cpp  stats.h  storage.cpp  teradata.cpp  token.cpp  token.h
test/: Makefile  runtests.sh
test/informix/: on_exception.sql  on_exception_expected_postgresql.sql  returning.sql  returning_expected_postgresql.sql
